--- a/src/app/pages/dbconsole/dbconsole.component.html
+++ b/src/app/pages/dbconsole/dbconsole.component.html
@@ -1,4 +1,33 @@
-<p>
-  dbconsole
-</p>
-<button mat-raised-button color="warn" (click)="updateTransactionsLogfix()">Ok</button>
+<mat-card>
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>dbconsole</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <button mat-raised-button color="warn" style="width: 200px;" class="mt-3" (click)="updateTransactionsLogfix()"
+      [disabled]="disableBtn">{{ btnTxt }}</button>
+    <div class="card">
+      <div class="card-header">
+        Console Output
+      </div>
+      <div class="card-body">
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let role of roles | async">
+            <div class="row">
+              <div class="col col-md-6">
+                {{ role.id }}
+              </div>
+              <div class="col col-md-6">
+                <div class="row">
+                  <div class="col col-md-12" *ngFor="let menu of role.menus">
+                    {{ menu }}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
