update cashload check

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -68,4 +68,18 @@
       </div>
     </div>
   </mat-card-content>
+  <mat-card-content>
+    <div class="row">
+      <div class="col-md-4 col-xl-3">
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>ShortCut</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+  </mat-card-content>
 </mat-card>
