update food screen

--- a/src/app/dialogs/users/users.component.html
+++ b/src/app/dialogs/users/users.component.html
@@ -29,3 +29,8 @@
     </tbody>
   </table>
 </div>
+<div class="row">
+  <div class="col col-md-12 text-right">
+    <button mat-flat-button color="warn" style="width: 100%;" (click)="reloadPrivilege()">{{ btnText }}</button>
+  </div>
+</div>
