--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -5,20 +5,20 @@
       </span>
       <span class="example-spacer"></span>
       <div fxShow="true" fxHide.lt-md="true">
-        <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of userMenus"  
-        routerLink="{{ menu.toLowerCase() }}">{{ menu }}</button>
+        <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of userMenus"
+          routerLink="{{ menu.toLowerCase() }}">{{ menu }}</button>
         <mat-menu #appMenu>
           <button mat-menu-item>
             <mat-icon>account_box</mat-icon>
             <span>{{ username }}</span>
           </button>
-          <button mat-menu-item>
-            <mat-icon>account_box</mat-icon>
-            <span>Profile</span>
-          </button>
           <button mat-menu-item (click)="openNewPassword()">
             <mat-icon>fingerprint</mat-icon>
             <span>Change password</span>
+          </button>
+          <button mat-menu-item routerLink="settings">
+            <mat-icon>settings</mat-icon>
+            <span>Settings</span>
           </button>
           <button mat-menu-item (click)="logOut()">
             <mat-icon>exit_to_app</mat-icon>
@@ -35,6 +35,10 @@
           <button mat-menu-item *ngFor="let menu of userMenus" routerLink="{{ menu }}">
             <mat-icon>account_box</mat-icon>
             <span>{{ menu }}</span>
+          </button>
+          <button mat-menu-item routerLink="settings">
+            <mat-icon>exit_to_app</mat-icon>
+            <span>Settings</span>
           </button>
           <button mat-menu-item (click)="logOut()">
             <mat-icon>exit_to_app</mat-icon>
