--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -38,7 +38,7 @@
         <div class="textTitle h5">Vendor</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/icons/weight.svg" class="gridImg">
+        <img src="../../../assets/icons/weight.svg" class="gridImg" (click)="openUnit()">
         <div class="textTitle h5">Unit</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
