--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,21 +7,21 @@
   </mat-card-header>
   <mat-card-content>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <div class="">
+    <div>
       <div class="row">
         <div class="col-md-4 col-xl-3">
           <div class="card bg-c-blue order-card">
             <div class="card-block">
               <h5 class="m-b-20">ຍອດຂາຍທັງໝົດ</h5>
-              <h4 class="text-right"><i class="fa fa-rocket f-left"></i><span>{{ transactionAmount |number }}</span>
-              </h4>
+              <h5 class="text-right"><i class="fa fa-rocket f-left"></i><span>{{ transactionAmount |number }}</span>
+              </h5>
               <p class="m-b-0">ຍອດການຂາຍ<span class="f-right">{{ transactionCount |number }} ລາຍການ</span></p>
             </div>
           </div>
         </div>
 
         <div class="col-md-4 col-xl-3">
-          <div class="card bg-c-green order-card">
+          <div class="card bg-c-blue order-card">
             <div class="card-block">
               <h5 class="m-b-20">ຍອດຂາຍ ຂອງວັນ </h5>
               <h4 class="text-right"><i
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-md-4 col-xl-3">
-          <div class="card bg-c-yellow order-card">
+          <div class="card bg-c-blue order-card">
             <div class="card-block">
               <h5 class="m-b-20">ຍອດຂາຍ ຕາມຄົວ ປະຈໍາວັນທີ {{ currentDate | date: 'dd-MMM-yyyy' }}</h5>
               <div *ngFor="let rp of reportByKitchen">
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="col-md-4 col-xl-3">
-          <div class="card bg-c-pink order-card">
+          <div class="card bg-c-blue order-card">
             <div class="card-block">
               <h5 class="m-b-20">ຍອດການຈ່າຍ</h5>
               <div *ngFor="let p of paymentMethodReport">
@@ -67,34 +67,5 @@
       </div>
     </div>
   </mat-card-content>
-  <mat-card-content>
-    <div class="row">
-      <div class="col-md-12">
-        <mat-card>
-          <mat-card-header>
-            <mat-card-title>ອາຫານ</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <div class="col-md-4 col-xl-3">
-              <div class="card bg-c-pink order-card">
-                <div class="card-block">
-                  <h5 class="m-b-20">ຍອດການຈ່າຍ</h5>
-                  <div *ngFor="let p of paymentMethodReport">
-                    <h4 class="text-right" *ngIf="p.paymentAmount > 0">
-                      <div class="f-left">
-                        {{ p.paymentMethod }}
-                      </div>
-                      <span>{{ p.paymentAmount | number }}</span>
-                    </h4>
-                    <p *ngIf="p.paymentAmount > 0" class="m-b-0 h5">ຍອດການຂາຍ<span
-                        class="f-right h5">{{ p.paymentCount | number}} ລາຍການ</span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-    </div>
-  </mat-card-content>
+
 </mat-card>
