--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -26,7 +26,7 @@
             <th scope="col" class="text-center">Settled</th>
             <th scope="col" class="text-center text-nowrap">Invoice no</th>
             <th scope="col" class="text-center">Kitchen</th>
-            <th scope="col" class="text-center">Recover</th>
+            <th scope="col" class="text-center">View Bill</th>
           </tr>
         </thead>
         <tbody>
@@ -62,7 +62,7 @@
             <td class="text-center align-middle">{{ transaction.invoiceno }}</td>
             <td class="text-center align-middle">{{ transaction.kitchen }}</td>
             <td class="text-center align-middle">
-              <button mat-raised-button color="warn" (click)="recoverTransaction()">Recover</button>
+              <button mat-raised-button color="primary" (click)="viewBillDetail(transaction)">View</button>
             </td>
           </tr>
         </tbody>
