--- a/src/app/dialogs/view-billdetails/view-billdetails.component.html
+++ b/src/app/dialogs/view-billdetails/view-billdetails.component.html
@@ -54,10 +54,10 @@
     <tfoot>
       <tr>
         <td colspan="4" class="text-center">
-          ລວມ
+          ລວມຍອດບິນ
         </td>
         <td class="text-right">
-          {{ billTotal | number }}
+          {{ data.bill_amount | number }}
         </td>
         <td colspan="2"></td>
       </tr>
