--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -4,8 +4,8 @@
     <mat-card-title>
       <span>Cashloads Managements</span>
     </mat-card-title>
-    <span class="float-right">
-      <button mat-flat-button color="primary" (click)="openCash()">Open</button>
+    <span style="position: absolute; right:16px;">
+      <button mat-flat-button color="primary" style="width: 200px;" (click)="openCash()">Open</button>
     </span>
 
     <mat-card-subtitle>All current Cashloads</mat-card-subtitle>
