--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -10,18 +10,17 @@
         <thead class="thead-light">
           <tr>
             <th scope="col" class="text-center">Q</th>
-            <th scope="col" class="text-center">transaction_date</th>
-
-            <th scope="col" class="text-center">foodName</th>
-            <th scope="col" class="text-center">cost</th>
-            <th scope="col" class="text-center">price</th>
-            <th scope="col" class="text-center">quantity</th>
+            <th scope="col" class="text-center">Transaction_date</th>
+            <th scope="col" class="text-center">Food Name</th>
+            <th scope="col" class="text-center">Cost</th>
+            <th scope="col" class="text-center">Price</th>
+            <th scope="col" class="text-center">Quantity</th>
             <th scope="col" class="text-center text-nowrap">Grand total</th>
             <th scope="col" class="text-center text-nowrap">Total cost</th>
             <th scope="col" class="text-center">Profit</th>
             <th scope="col" class="text-center text-nowrap">Bill Amount</th>
             <th scope="col" class="text-center text-nowrap">Payment By</th>
-            <th scope="col" class="text-center">refno</th>
+            <th scope="col" class="text-center">REFNO</th>
             <th scope="col" class="text-center text-nowrap">QR Refno</th>
             <th scope="col" class="text-center">Settled</th>
             <th scope="col" class="text-center text-nowrap">Invoice no</th>
