update cahload prevent load

--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -97,7 +97,7 @@
                   </td>
                   <td class="text-center align-middle">
                     <img mat-raised-button src="../../../assets/icons/baseline-delete-24px.svg"
-                      (click)="removeCashLoad(cash.id)" style="width: 20px;cursor: pointer;"></td>
+                      (click)="removeCashLoad(cash)" style="width: 20px;cursor: pointer;"></td>
                 </tr>
               </tbody>
             </table>
