--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -19,8 +19,8 @@
         <div class="col-lg-12 col-sm-12 col-12 form-input">
           <form [formGroup]="usersForm">
             <div class="form-group">
-              <input type="email" class="form-control" formControlName="email" id="email" autocomplete="off"
-                required="required" placeholder="email" />
+              <input type="text" class="form-control" formControlName="email" id="email" autocomplete="off"
+                required="required" placeholder="username" />
             </div>
             <div class="form-group">
               <input type="password" class="form-control" formControlName="password" autocomplete="off" minlength="6"
