--- a/src/app/pages/transactions/transactions.component.html
+++ b/src/app/pages/transactions/transactions.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Transactions</mat-card-title>
+    <mat-card-title>Successfull Transactions</mat-card-title>
     <mat-card-subtitle>Summary all Transactions</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
