update cash load status

--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -36,7 +36,7 @@
                   <th scope="col" class="text-center">ເວລາປີດ</th>
                   <th scope="col" class="text-center">ອະນຸມັດໂດຍ</th>
                   <th scope="col" class="text-center">ອະນຸມັດປິດຍອດ</th>
-                  <th scope="col" class="text-center">ສະຖານະ</th>
+                  <th scope="col" class="text-center">ອະນຸມັດປີດຍອດ</th>
                   <th scope="col" class="text-center">ໝາຍເຫດ</th>
                   <th scope="col" class="text-center">ປິດການຂາຍ</th>
                   <th scope="col" class="text-center">ຈັດການ</th>
