--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -26,7 +26,7 @@
               <input type="password" class="form-control" formControlName="password" autocomplete="off" minlength="6"
                 placeholder="password" id="password" required="required" />
             </div>
-            <button type="submit" class="btn btn-success btn-lg" (click)="loginByEmail()"
+            <button type="submit" [disabled]="loginBtnDisable" class="btn btn-success btn-lg" (click)="loginByToken()"
               class="btn btn-success">Login</button>
             <button type="submit" class="btn btn-primary btn-lg" (click)="openRegister()"
               class="btn btn-success">ລົງທະບຽນໃໝ່</button>
