--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -55,7 +55,7 @@
                       style="max-width: 20px;cursor: pointer;">
                   </td>
                   <ng-template #loadApprovedTag>
-                    <td class="text-center align-middle" (click)="approvedLoadCash(cash.id)">
+                    <td class="text-center align-middle" (click)="approvedLoadCash(cash.id, cash.cashloadId)">
                       <img mat-raised-button src="../../../assets/icons/cancel.svg"
                         style="max-width: 20px;cursor: pointer;">
                     </td>
